react-frontend/k8s/istio-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: caller-callme-frontend-destination
spec:
  host: caller-callme-frontend-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caller-callme-route
spec:
  hosts:
    - "frontend.caller-callme.com"
  gateways:
    - caller-callme-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          host: caller-callme-frontend-service
          #port:
          #  number: 80
---
