react-frontend/k8s/istio-rule22.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: caller-callme-frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*' # "frontend.caller-callme.com"
    port:
      name: http
      number: 80
      protocol: HTTP
    #- port:
    #    number: 80
    #    name: http
    #    protocol: HTTP
    #  hosts:
    #    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: caller-callme-frontend-destination
spec:
  host: caller-callme-frontend-service
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: caller-callme-frontend-route
spec:
  hosts:
    - '*' # "frontend.caller-callme.com"
  gateways:
    - caller-callme-frontend-gateway
  http:
  - route:
      - destination:
          host: caller-callme-frontend-service
          port:
            number: 80
---
